# CodeBase-Intelligence-Hub

./: .env.example  .gitignore  CLAUDE.md  CodeBase_Intelligence_Hub_系统功能文档.md  IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml
.github/: BADGES.md  GITHUB_ACTIONS_QUICK_START.md  WORKFLOWS_SUMMARY.md  WORKFLOW_TRIGGERS.md
.github/workflows/: README.md  ci.yml  code-quality.yml  deploy.yml  manual-ingest.yml
agents/: __init__.py
api/: __init__.py  main.py  routes.py  schemas.py
chains/: rag.py  simple_rag_style.py  structured_chain.py
chroma_db/: chroma.sqlite3
config/: logging_config.py  prompts.py  settings.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: MULTI_THREADED_INGEST.md  分阶段任务计划书.md  项目评审与执行指南.md
docs/phased-tutorial/: 00-总览与阶段索引.md  phase-0-环境与LangChain初识.md  phase-0.1-调用国产大模型GLM.md  phase-1-LCEL与提示词.md  phase-2-文档加载与分块.md  phase-3-向量存储与检索.md  phase-4-RAG管道.md  phase-5-工具与单Agent.md  phase-6-LangGraph与编排.md  phase-7-多Agent协作.md  phase-8-记忆流式与API.md  requirements-by-phase.md
evaluation/: PARALLEL_BENCHMARKING_GUIDE.md  baseline.py  benchmark.py  benchmark_comparison.py  benchmark_parallel.py  dataset.py  metrics.py  report.py  simple_parallel_benchmark.py
graph/: builder.py  builder_parallel.py  nodes.py  state.py
memory/: __init__.py  simple.py
retrieval/: embeddings.py  ingestion.py  loaders.py  pipeline.py  pipeline_parallel.py  splitters.py  vectorstore.py
scripts/: ingest.py  test_ingest_multithread.py
static/: app.js  index.html  style.css
tools/: __init__.py  code_tools.py  git_tools.py
