[project]
name = "codebase-intelligence-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.2.19",
    "langchain-openai>=1.1.11",
    "openai>=2.28.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
]
