[project]
name = "codebase-intelligence-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.2.19",
    "langchain-openai>=1.1.11",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.4.0",
    "openai>=2.28.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "langserve>=0.2.0",
]
